Fix header spacing and put blogger comment icon to left of comment

--- a/css/main.css
+++ b/css/main.css
@@ -1787,7 +1787,7 @@ code {
 #intro .bg1 {
   z-index: 100;
   width: 100%;
-  height: 400px
+  height: 380px
 }
 
 #intro .bg1 {
@@ -1826,7 +1826,7 @@ code {
   width: 100%;
   text-align: center;
   z-index: 150;
-  padding-top: 70px;
+  padding-top: 20px;
   text-shadow: 3px 3px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000
 }
 
